<resources>
    <string name="app_name">Music_60</string>
    <string name="title_navigate_next">Navigate Next</string>
    <string name="title_latest_songs">Latest Songs</string>
    <string name="title_genres">Genres</string>
    <string name="msg_song_cover">Songs cover</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="title_online">Online</string>
    <string name="title_local">Local</string>
    <string name="msg_genre_cover">Genre Cover</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="msg_empty_list">There is no song currently playing</string>
</resources>
