<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playmusic.PlayMusicFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:contentDescription="@string/msg_song_cover"
        android:scaleType="fitXY"
        android:src="@drawable/songs_cover" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_white"
        android:gravity="center">

        <ImageView
            android:id="@+id/songs_cover_one"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:contentDescription="@string/msg_song_cover"
            android:src="@drawable/songs_cover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/songs_title"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="sans-serif-condensed"
            android:lines="1"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_22"
            app:layout_constraintBottom_toTopOf="@+id/songs_artist_name"
            app:layout_constraintLeft_toRightOf="@+id/songs_cover_one"
            app:layout_constraintRight_toLeftOf="@id/play_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/songs_artist_name"
            android:layout_width="@dimen/dp_220"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:lines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/songs_cover_one"
            app:layout_constraintRight_toLeftOf="@id/play_button"
            app:layout_constraintTop_toBottomOf="@id/songs_title" />

        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/action_play"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/round_play_arrow_black_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/action_pause"
            android:focusable="true"
            android:scaleType="centerInside"
            android:src="@drawable/round_pause_black_48dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <!-- TODO: Update play music fragment layout -->

</FrameLayout>
